@@ -15,10 +15,10 @@
 <div id="tempcontent">
 </div>
 <div id="customlog" style="display:none;">
-    <table width="95%">
+    <table width="100%">
         <tr>
-            <td width="80%"><div id="customgraph" style="height: 400px; vertical-align:top;"></div></td>
-            <td width="20%">
+            <td width="75%"><div id="customgraph" style="height: 400px; vertical-align:top;"></div></td>
+            <td width="25%">
              <table>
               <tr><td style="margin-top:7px; padding-left:10px; vertical-align:top;">
                 <span data-i18n="Select graph type"></span>:
@@ -34,11 +34,11 @@
                 <table>
                     <tr>
                       <td align="left"><label for="graphfrom"><span data-i18n="From"></span>:</label></td>
-                      <td><input type="text" style="width: 70px;" id="graphfrom" class="datepick" name="graphfrom" /></td>
+                      <td><input type="text" style="width: 80px;" id="graphfrom" class="datepick" name="graphfrom" /></td>
                     </tr>
                     <tr>
                       <td align="left"><label for="graphto"><span data-i18n="To"></span>:</label></td>
-                      <td><input type="text" style="width: 70px;" id="graphto" class="datepick" name="graphto" /></td>
+                      <td><input type="text" style="width: 80px;" id="graphto" class="datepick" name="graphto" /></td>
                    </tr>
                    <tr>
                       <td style="padding: 5px;"><input type="checkbox" class="devicecheckbox" id="graphTemp" checked><span data-i18n="Temperature"></span></td>
