@@ -28,6 +28,7 @@ Version 1.0.xxx (June xxth 2013)
 - Implemented: Lux Meter Type (Currently used by Z-Wave hardware)
 - Implemented: X10 Security Arm/Disarm from dashboard/switches tab
 - Removed: Altitude from BMP085 sensor
+- Implemented: X10 Security Remote Arm Home/Arm Away prompt
 
 Version 1.0.666 (May 28th 2013)
 - Implemented: Settings, Doorbell could be send as 'Group On' or 'On' command
